[NO-JIRA] Spacing fixes

--- a/src/containers/HomePage/home.scss
+++ b/src/containers/HomePage/home.scss
@@ -2,6 +2,8 @@
 
 .home {
   &__card-container {
+    margin-top: $spacing-base;
+
     @include card-container;
   }
 
