--- a/src/containers/Support/support.scss
+++ b/src/containers/Support/support.scss
@@ -3,6 +3,7 @@
 .support {
   &__controls {
     width: 100%;
+    margin-top: $spacing-lg;
     margin-bottom: $spacing-base;
   }
 
